--- a/index.html
+++ b/index.html
@@ -22,14 +22,7 @@
         // Your web app's Firebase configuration
         // For Firebase JS SDK v7.20.0 and later, measurementId is optional
         const firebaseConfig = {
-            apiKey: "AIzaSyDnxnBQMETtiHIX14MosLyvxy5UuKE6FH0",
-            authDomain: "jungyo-iot-server.firebaseapp.com",
-            databaseURL: "https://jungyo-iot-server-default-rtdb.firebaseio.com",
-            projectId: "jungyo-iot-server",
-            storageBucket: "jungyo-iot-server.appspot.com",
-            messagingSenderId: "697891769932",
-            appId: "1:697891769932:web:093754cfb659fa0b7c2ee9",
-            measurementId: "G-3KRKTSBFJN"
+            //firebaseConfig
         };
       
         // Initialize Firebase
